--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
         // Auto-refresh every hour
         setInterval(() => {
             location.reload();
-        }, 1000000); // 1 hour in milliseconds
+        }, 100000); // 1 hour in milliseconds
 
         async function loadData() {
             try {
